# swemaps

./: .gitignore  LICENSE  README.md  geojson.py  pyproject.toml  swe-maps-kommun.geojson  swe-maps-lan.geojson  swe-maps-laomraden.geojson
.github/workflows/: ci.yml  release.yml
src/swemaps/: __init__.py  _fetcher.py  _version.py  utils.py
src/swemaps/data/: fa.parquet  kommun.parquet  lan.parquet
tests/: smoke_test.py  sthlm.geojson  test_maps.py
tests/__snapshots__/: test_maps.ambr
