[project]
name = "swemaps"
version = "0.1.1"
description = "Sweden in GeoParquet for easy usage."
license = "MIT"
repository = "https://github.com/stefur/swemaps/"
keywords = ["geoparquet", "maps", "geoarrow", "pyarrow", "geopandas", "sweden"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
authors = [
    { name = "Stefan Furne", email = "stefan@furne.net" }
]

readme = "README.md"
requires-python = ">= 3.11"

[project.urls]
Repository = "https://github.com/stefur/swemaps"

[project.optional-dependencies]
pyarrow-geojson = [
    "pyarrow>=16.0.0",
    "geomet>=1.1.0",
]
ci = [
    "pytest>=8.2.0",
    "pyarrow>=16.0.0",
    "geopandas>=0.14.4",
    "geomet>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pyarrow>=16.0.0",
    "geopandas>=0.14.4",
    "geomet>=1.1.0",
    "ipykernel>=6.29.4",
]
