[project]
name = "swemaps"
version = "0.1.4"
description = "Maps of Sweden in GeoParquet for easy usage."
license = "MIT"
repository = "https://github.com/stefur/swemaps/"
keywords = ["geoparquet", "maps", "geoarrow", "pyarrow", "geopandas", "sweden", "choropleth"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",   
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
authors = [
    { name = "Stefan Furne", email = "stefan@furne.net" }
]

readme = "README.md"
requires-python = ">= 3.9"

[project.urls]
Repository = "https://github.com/stefur/swemaps"

[project.optional-dependencies]
geojson = [
    "geoarrow-rust-io>=0.3.0",
]
ci = [
    "pytest>=8.2.0",
    "pyarrow>=16.0.0",
    "geopandas>=0.14.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pyarrow>=16.0.0",
    "geopandas>=0.14.4",
    "ipykernel>=6.29.4",
    "geoarrow-rust-io>=0.3.0",
]
