[project]
name = "swemaps"
dynamic = ["version"]
description = "Maps of Sweden in GeoParquet for easy usage."
license = "MIT"
repository = "https://github.com/stefur/swemaps/"
keywords = ["geoparquet", "maps", "geoarrow", "pyarrow", "geopandas", "sweden", "choropleth"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",   
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
authors = [
    { name = "Stefan Furne", email = "stefan@furne.net" }
]

readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "pooch>=1.9.0",
]

[project.urls]
Repository = "https://github.com/stefur/swemaps"

[project.optional-dependencies]
geojson = [
    "geoarrow-rust-io>=0.3.0,<0.4.0",
]

[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "versioningit"

[tool.hatch.build]
artifacts = ["src/swemaps/_version.py"]

[tool.versioningit.write]
file = "src/swemaps/_version.py"

[dependency-groups]
dev = [
    "geoarrow-rust-io>=0.3.0,<0.4.0",
    "geopandas>=1.0.1",
    "pyarrow>=17.0.0",
    "pytest>=8.3.3",
    "syrupy>=4.8.0",
]
